k8s/deployment-ethlis.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: walletkit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: walletkit
  template:
    metadata:
      labels:
        app: walletkit
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: walletkit
          image: waltid/walletkit:ethlis
          volumeMounts:
            - name: ethlis-config
              mountPath: "/waltid/wallet/config/"
              readOnly: true
            - mountPath: "/waltid/wallet/data/"
              name: ethlis-data
          args:
            - run
          ports:
            - containerPort: 8080
              name: http-api
      volumes:
        - name: ethlis-config
          configMap:
            name: ethlis-config
        - name: ethlis-data
          persistentVolumeClaim:
            claimName: ethlis-data-volume-claim
---
kind: Service
apiVersion: v1
metadata:
  name: walletkit
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: walletkit
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-wallet
  template:
    metadata:
      labels:
        app: web-wallet
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: ssikit-web-wallet
          image: waltid/ssikit-web-wallet:ethlis
          ports:
            - containerPort: 80
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: web-wallet
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: web-wallet
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: verifier-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verifier-portal
  template:
    metadata:
      labels:
        app: verifier-portal
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: ssikit-verifier-portal
          image: waltid/ssikit-verifier-portal:ethlis
          ports:
            - containerPort: 80
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: verifier-portal
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: verifier-portal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ethlisingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - ethlis-dapp.walt.id
        - ethlis-wallet.walt.id
      secretName: ethlis-tls-secret
  rules:
    - host: ethlis-dapp.walt.id
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /verifier-api/
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /webjars
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verifier-portal
                port:
                  number: 80
    - host: ethlis-wallet.walt.id
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /verifier-api/
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /webjars
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-wallet
                port:
                  number: 80
