k8s/deployment-iota.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: walletkit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: walletkit
  template:
    metadata:
      labels:
        app: walletkit
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: walletkit
          image: waltid/walletkit:latest
          volumeMounts:
            - name: iota-config
              mountPath: "/waltid/wallet/config/"
              readOnly: true
            - mountPath: "/waltid/wallet/data/"
              name: iota-data
          args:
            - run
          ports:
            - containerPort: 8080
              name: http-api
      volumes:
        - name: iota-config
          configMap:
            name: iota-config
        - name: iota-data
          persistentVolumeClaim:
            claimName: iota-data-volume-claim
---
kind: Service
apiVersion: v1
metadata:
  name: walletkit
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: walletkit
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: issuer-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuer-portal
  template:
    metadata:
      labels:
        app: issuer-portal
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: ssikit-issuer-portal
          image: waltid/ssikit-issuer-portal:latest
          ports:
            - containerPort: 80
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: issuer-portal
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: issuer-portal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iota-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - iota-issuer.walt.id
      secretName: iota-tls-secret
  rules:
    - host: iota-issuer.walt.id
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /issuer-api/
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /webjars
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: issuer-portal
                port:
                  number: 80
